# grok3-bridge

./: README.md  pyproject.toml  run_server.sh  run_test.sh
plugin/: background.js  content.js  manifest.json  web_accessible_resources.html
src/client/: test_client.py
src/server/: server.py
